# group-04

./: .gitignore  README.md  android-ci.yml
.github/workflows/: android-ci.yml  arduino-build.yml
Assignment1/obsAvoidance/: obsAvoidance.ino
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/medcarapp/: DrawableMatcher.java  ExampleInstrumentedTest.java  IntroductoryActivityTest.java  MainActivityTest.java  ManualControlTest.java  RecyclerViewMatcher.java  ServerSelectionTest.java  ToastMatcher.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/Vibrator/: VibratorWrapper.java
android/app/src/main/java/com/example/medcarapp/: Adapter.java  CarAdapter.java  IntroductoryActivity.java  MainActivity.java  ManualControl.java  ServerAdapter.java  ServerSelection.java  login.java
android/app/src/main/java/com/example/myapplication/: MainActivity.java
android/app/src/main/java/mqttController/: CarConnect.java  MainActivity.java  MqttClient.java
android/app/src/main/java/vibrator/: VibratorWrapper.java
android/app/src/main/res/anim/: splash_animation.xml
android/app/src/main/res/layout/: activity_introductory.xml  activity_main.xml  activity_manual_control.xml  credit_popup.xml  login.xml  recycle_view_rows.xml  server_rows.xml  server_selection.xml
android/app/src/main/res/layout-land/: activity_main.xml  activity_manual_control.xml  login.xml  server_selection.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/medcarapp/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
arduino/: CMakeLists.txt
arduino/sketches/smartcar/: BackDistanceSensorImplementation.h  Car.h  DistanceSensorInterface.h  FrontDistanceSensorImplementation.h  MQTTinterface.h  SerialImplementation.h  Serialinterface.h  SimpleCarController.h  SimpleCarMqttImplementation.h  SimpleCarWrapper.h  StringToIntUtil.h  smartcar.ino
arduino/sketches/smartcarTestable/: BackDistanceSensorImplementation.h  Car.h  FrontDistanceSensorImplementation.h  MQTTinterface.h  Serial.h  SerialImplementation.cpp  SerialImplementation.h  Serialinterface.h  SimpleCarController.cpp  SimpleCarController.h  SimpleCarMqttImplementation.cpp  SimpleCarMqttImplementation.h  SimpleCarWrapper.cpp  SimpleCarWrapper.h  StringUtil.h  smartcarTestable.ino
arduino/smartcar/: smartcar.ino
arduino/test/: CMakeLists.txt
arduino/test/mocks/: MockCar.h  MockDistanceSensors.h  MockMQTT.h  MockSerial.h
arduino/test/ut/: SimpleCarController_test.cpp
